# sare

./: .gitignore  CMakeLists.txt  README.md  auto_runner.py  check_curriculum.py  evolver_daemon.py  learn_daemon.py  pyproject.toml  run.sh  run_evolver.py
.github/workflows/: ci.yml
benchmarks/algebra/: smoke.json  symbolic_math.json
benchmarks/arc/: arc_lite.json
benchmarks/coding/: simplify.json
benchmarks/hard_suite/: hard_problems.json
benchmarks/logic/: smoke.json
benchmarks/verifier/: regression.json
configs/: abstractions.json.bak  default.yaml  engineering_checklist.json  knowledge_seeds.json  llm.json
core/abstraction/: abstraction_registry.cpp  abstraction_registry.hpp  compression_evaluator.cpp  compression_evaluator.hpp  macro_builder.cpp  macro_builder.hpp  trace_miner.cpp  trace_miner.hpp
core/bindings/: pybind_module.cpp
core/causal/: counterfactual.cpp  counterfactual.hpp  hypothesis_ranker.cpp  hypothesis_ranker.hpp  intervention.cpp  intervention.hpp
core/energy/: complexity_energy.cpp  complexity_energy.hpp  constraint_energy.cpp  constraint_energy.hpp  default_energy.cpp  default_energy.hpp  energy.hpp  energy_aggregator.cpp  resource_energy.cpp  resource_energy.hpp  syntax_energy.cpp  syntax_energy.hpp  test_energy.cpp  test_energy.hpp
core/graph/: edge.hpp  graph.cpp  graph.hpp  graph_diff.cpp  graph_diff.hpp  graph_snapshot.cpp  graph_snapshot.hpp  node.hpp  subgraph_matcher.cpp  subgraph_matcher.hpp
core/memory/: episodic_store.cpp  episodic_store.hpp  graph_signature.cpp  graph_signature.hpp  strategy_memory.cpp  strategy_memory.hpp
core/plasticity/: module_generator.cpp  module_generator.hpp  pruning_manager.cpp  pruning_manager.hpp  sandbox_runner.cpp  sandbox_runner.hpp
core/reflection/: causal_induction.cpp  causal_induction.hpp  concept_registry.hpp  reflection_engine.cpp  reflection_engine.hpp
core/search/: beam_search.cpp  beam_search.hpp  budget_manager.hpp  mcts.cpp  mcts.hpp  search_controller.hpp  search_state.hpp
core/transforms/: algebra_transforms.cpp  algebra_transforms.hpp  ast_transforms.cpp  ast_transforms.hpp  default_transforms.cpp  default_transforms.hpp  logic_transforms.cpp  logic_transforms.hpp  optimization_transforms.cpp  transform_base.hpp  transform_registry.cpp  transform_registry.hpp
core/verification/: verification.cpp  verification.hpp
data/: hard_problems.json
data/memory/: active_goals.json  active_questions.json  agent_memories.json  algorithm_selector.json  autobiographical.json.bak  autobiographical.json.tmp  autonomous_trainer_stats.json  benchmark_cache.json  benchmark_history.json  bottleneck_report.json  brain_state.json  capability_gaps.json  causal_hierarchy.json  causal_knowledge_base.json  commonsense.json  composite_rules.json  concept_graph.json  concept_memory.json  concept_registry.json  credit_assigner.json  dashboard_history.json  developmental_curriculum.json  developmental_curriculum_state.json  dialogue_sessions.json  dialogue_state.json  embodied_state.json  episodes.jsonl  evolver_chat_history.json  evolver_daemon.json  evolver_run_report.json  experiential_learner.json  frontier.jsonl  general_solver_stats.json  hallucinated_rules.py  hard_suite_history.json  (+32 more)
docs/: AGI_ASSESSMENT_AND_PLAN.md  AGI_DEVELOPMENT_ROADMAP.md  AGI_DEVELOPMENT_TODO.md  ARCHITECTURE.md  FUTURE_AGI_PLAN.md  GOVERNANCE.md  HONEST_AGI_ASSESSMENT.md  system_architecture.md
python/: test_synthesizer.py
scripts/: autonomous_loop.py  autonomous_run.py  install_bindings.py  run_benchmarks.py
tests/: test_abstraction.cpp  test_causal.cpp  test_energy.cpp  test_graph.cpp  test_mcts.cpp  test_memory.cpp  test_plasticity.cpp  test_python_runtime.py  test_reflection.cpp  test_search.cpp  test_transforms.cpp  test_verification.cpp
(+570 files in other folders)
